# stable-diffusion-nix

./: .gitignore  LICENSE  README.org  flake.nix  overrides.nix
automatic1111/: codeformer_weights_dir.patch  gradio_file_directories.patch  packages.nix  pyproject.toml  sd_cache_file.patch  sd_data_dir.patch  sd_extensions_dir.patch  sd_modules_path.patch  sd_params_file.patch
invoke-ai/: pyproject.toml  pyreadline3.patch
invokeai/: pyproject.toml
