[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "automatic1111"
description = "automatic1111"
version = "20230128"
authors = []
packages = [
    { include = "modules" },
    { include = "scripts" },
    { include = "webui.py" },
    { include = "launch.py" },
]

include = [
  "script.js",
  "style.css",
  "artists.csv",

  "html/*",
  "configs/*",
  "javascript/*",
  "extensions-builtin/**/*",
]

[tool.poetry.scripts]
run = 'webui:webui'


[tool.poetry.dependencies]
python = "^3.10"

xformers = "0.0.16.dev430"

GitPython = ">=3.1.30"
Pillow = ">=9.4.0"
accelerate = ">=0.15.0"
basicsr = ">=1.4.2"
blendmodes = ">=2022"
clean-fid = ">=0.1.35"
einops = ">=0.6.0"
fairscale = "==0.4.4"
font-roboto = ">=0.0.1"
fonts = ">=0.0.3"
gfpgan = ">=1.3.8"
gradio = "==3.16.2"
inflection = ">=0.5.1"
invisible-watermark = ">=0.1.5"
jsonmerge = ">=1.9.0"
kornia = ">=0.6.9"
lark = ">=1.1.5"
numpy = ">=1.23.0"
omegaconf = ">=2.3.0"
opencv-contrib-python = ">=4.7.0.68"
piexif = ">=1.1.3"
psutil = ">=5.9.4"
pytorch_lightning = "==1.7.7"
realesrgan = ">=0.3.0"
requests = ">=2.28.2"
resize-right = ">=0.0.2"
safetensors = ">=0.2.8"
scikit-image = ">=0.19"
timm = "==0.4.12"
torch = ">=1.13.1"
torchdiffeq = ">=0.2.3"
torchsde = ">=0.2.5"
transformers = "==4.19.2"

numba = ">=0.56.4"

clip = { git = "https://github.com/openai/CLIP.git", rev = "d50d76daa670286dd6cacf3bcd80b5e4823fc8e1" }
k-diffusion = { git = "https://github.com/Birch-san/k-diffusion.git", rev = "5b3af030dd83e0297272d861c19477735d0317ec" }
open-clip-torch = { git = "https://github.com/mlfoundations/open_clip.git", rev = "bb6e834e9c70d9c27d0dc3ecedeebeaeb1ffad6b" }
stable-diffusion = { git = "https://github.com/Stability-AI/stablediffusion.git", rev = "47b6b607fdd31875c9279cd2f4f16b92e4ea958e" }
taming-transformers = { git = "https://github.com/CompVis/taming-transformers.git", rev = "24268930bf1dce879235a7fddd0b2355b84d7ea6" }

# Can't install these as the project setup are bad
# codeformer = { git = "https://github.com/sczhou/CodeFormer.git", rev = "c5b4593074ba6214284d6acd5f1719b6c5d739af" }
# blip = { git = "https://github.com/salesforce/BLIP.git", rev = "48211a1594f1321b00f14c9f7a5b4813144b2fb9" }

# BLIP
pycocoevalcap = "*"

# CodeFormer
addict = "*"
future = "*"
lmdb = "*"
opencv-python = "*"
pyyaml = "*"
scipy = "*"
torchvision = "*"
tqdm = "*"
yapf = "*"
lpips = "*"
gdown = "*"
