[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "invokeai"
version = "20230117"
authors = []
description = "InvokeAI"

[tool.poetry.dependencies]
python = "^3.10"

# Use arrow 9 as this is the version nixpkgs provides
pyarrow = { version = "^9.0.0", optional = true }

setuptools = ">=66.0.0"
hatchling = ">=1.12.0"

accelerate = "^0.15.0"
albumentations = "^1.3.0"
datasets = "^2.8.0"
diffusers = {version = ">=0.11,<1.0", extras = ["torch"]}
dnspython = "2.2.1"
einops = "^0.6.0"
eventlet = "^0.33.2"
facexlib = "^0.2.5"
flask = "2.1.3"
flask-cors = "3.0.10"
flask-socketio = "5.3.0"
flaskwebgui = "1.0.3"
getpass-asterisk = "^1.0.1"
gfpgan = "1.3.8"
huggingface-hub = ">=0.11.1"
imageio = "^2.24.0"
imageio-ffmpeg = "^0.4.8"
kornia = "^0.6.9"
npyscreen = "^4.10.5"
numpy = ">=1.23.0,<1.24.0"
omegaconf = "^2.3.0"
opencv-python = "^4.7.0.68"
picklescan = "^0.0.7"
pillow = "^9.4.0"
pudb = "^2022.1.3"
pytorch-lightning = "1.7.7"
realesrgan = "^0.3.0"
requests = "2.25.1"
safetensors = "^0.2.8"
scikit-image = ">=0.19"
send2trash = "^1.8.0"
streamlit = "^1.17.0"
taming-transformers-rom1504 = "^0.0.6"
test-tube = ">=0.7.5"
torch-fidelity = "^0.3.0"
torchmetrics = "^0.11.0"
transformers = ">=4.25,<5.0"

clip = { git = "https://github.com/openai/CLIP.git", rev = "eaa22acb90a5876642d0507623e859909230a52d" }
k-diffusion = { git = "https://github.com/Birch-san/k-diffusion.git", branch = "mps" }
pypatchmatch = { git = "https://github.com/invoke-ai/PyPatchMatch.git", tag = "0.1.5" }
clipseg = { git = "https://github.com/invoke-ai/clipseg.git", branch = "relaxed-python-requirement" }

nvidia-cudnn-cu11 = "~8.5.0"
nvidia-cuda-nvrtc-cu11 = "~11.7"
nvidia-cuda-runtime-cu11 = "~11.7"
