[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "invokeai-wrapper"
description = "invokeai"
version = "2.3.4"
authors = []

packages = [
    { include = "placeholder.py" },
]

[tool.poetry.scripts]
"invokeai" = "ldm.invoke.CLI:main"
"invokeai-configure" = "ldm.invoke.config.invokeai_configure:main"
"invokeai-model-install" = "ldm.invoke.config.model_install:main"
"invokeai-merge" = "ldm.invoke.merge_diffusers:main"
"invokeai-ti" = "ldm.invoke.training.textual_inversion:main"
"invokeai-update" = "ldm.invoke.config.invokeai_update:main"
"invokeai-batch" = "ldm.invoke.dynamic_prompts:main"
"invokeai-metadata" = "ldm.invoke.invokeai_metadata:main"

[tool.poetry.dependencies]
python = "<3.11,>=3.9"
diffusers = "=0.14.0"
InvokeAI = { version = "2.3.4", extras = ["xformers"] }
